update swagger from 1.0.5 to 1.0.6 for new API format without {apartment}
