# python-flask-server-generated/swagger_server/swagger/swagger.yaml
@@ -2,25 +2,16 @@ openapi: 3.0.0
 info:
   title: home-iot-api
   description: The API for the OVK-1 IOT project
-  version: 1.0.5
+  version: 1.0.6
 servers:
-- url: https://virtserver.swaggerhub.com/OVK/OVK_mob1/1.0.5
+- url: https://virtserver.swaggerhub.com/OVK/OVK_mob1/1.0.6
   description: SwaggerHub API Auto Mocking
 paths:
-  /temperatureRoom/{apartment}:
+  /temperatureRoom/:
     get:
       tags:
       - Environment
       operationId: temperature_room
-      parameters:
-      - name: apartment
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int32
       responses:
         "200":
           description: ok
@@ -28,22 +19,19 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TemperatureSensorGet'
+        "404":
+          description: some errors...
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
       x-swagger-router-controller: Environment
       x-openapi-router-controller: swagger_server.controllers.environment_controller
-  /temperatureWater/{apartment}:
+  /temperatureWater/:
     get:
       tags:
       - Environment
       operationId: temperature_water
-      parameters:
-      - name: apartment
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int32
       responses:
         "200":
           description: ok
@@ -59,58 +47,6 @@ paths:
       - Environment
       summary: Call current weather data for one location
       operationId: temperature_weather
-      parameters:
-      - name: q
-        in: query
-        description: '**City name**. *Example: London*. You can call by city name,
-          or by city name and country code. The API responds with a list of results
-          that match a searching word. For the query value, type the city name and
-          optionally the country code divided by a comma; use ISO 3166 country codes.'
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: idd
-        in: query
-        description: '**City ID**. *Example: `2172797`*. You can call by city ID.
-          The API responds with the exact result. The List of city IDs can be downloaded
-          [here](http://bulk.openweathermap.org/sample/). You can include multiple
-          cities in this parameter &mdash; just separate them by commas. The limit
-          of locations is 20. *Note: A single ID counts as a one API call. So, if
-          you have city IDs, it''s treated as 3 API calls.*'
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: lat
-        in: query
-        description: '**Latitude**. *Example: 35*. The latitude coordinate of the
-          location of your interest. Must use with `lon`.'
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: lon
-        in: query
-        description: '**Longitude**. *Example: 139*. Longitude coordinate of the location
-          of your interest. Must use with `lat`.'
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: zipp
-        in: query
-        description: '**Zip code**. Search by zip code. *Example: 95050,us*. Please
-          note that if the country is not specified, the search uses USA as a default.'
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
       responses:
         "200":
           description: ok
@@ -126,20 +62,11 @@ paths:
                 $ref: '#/components/schemas/Errors'
       x-swagger-router-controller: Environment
       x-openapi-router-controller: swagger_server.controllers.environment_controller
-  /targetTemperature/{apartment}:
+  /targetTemperature:
     get:
       tags:
       - Environment
       operationId: target_temperature
-      parameters:
-      - name: apartment
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int32
       responses:
         "200":
           description: ok
@@ -155,20 +82,11 @@ paths:
                 $ref: '#/components/schemas/Errors'
       x-swagger-router-controller: Environment
       x-openapi-router-controller: swagger_server.controllers.environment_controller
-  /temperatureComfort/{apartment}:
+  /temperatureComfort:
     get:
       tags:
       - Environment
       operationId: temperature_comfort
-      parameters:
-      - name: apartment
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int32
       responses:
         "200":
           description: ok
@@ -184,20 +102,11 @@ paths:
                 $ref: '#/components/schemas/Errors'
       x-swagger-router-controller: Environment
       x-openapi-router-controller: swagger_server.controllers.environment_controller
-  /temperatureEconom/{apartment}:
+  /temperatureEconom:
     get:
       tags:
       - Environment
       operationId: temperature_econom
-      parameters:
-      - name: apartment
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int32
       responses:
         "200":
           description: ok
@@ -213,21 +122,12 @@ paths:
                 $ref: '#/components/schemas/Errors'
       x-swagger-router-controller: Environment
       x-openapi-router-controller: swagger_server.controllers.environment_controller
-  /updateTargetTemperature/{apartment}:
+  /updateTargetTemperature:
     post:
       tags:
       - Environment
       description: target room temperature
       operationId: update_target_temperature
-      parameters:
-      - name: apartment
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int32
       requestBody:
         description: target t
         content:
@@ -250,21 +150,12 @@ paths:
                 $ref: '#/components/schemas/Errors'
       x-swagger-router-controller: Environment
       x-openapi-router-controller: swagger_server.controllers.environment_controller
-  /updateComfortTemperature/{apartment}:
+  /updateComfortTemperature:
     post:
       tags:
       - Environment
       description: target room temperature
       operationId: update_comfort_temperature
-      parameters:
-      - name: apartment
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int32
       requestBody:
         description: Comfort t
         content:
@@ -287,21 +178,12 @@ paths:
                 $ref: '#/components/schemas/Errors'
       x-swagger-router-controller: Environment
       x-openapi-router-controller: swagger_server.controllers.environment_controller
-  /updateEconomTemperature/{apartment}:
+  /updateEconomTemperature:
     post:
       tags:
       - Environment
       description: target room temperature
       operationId: update_econom_temperature
-      parameters:
-      - name: apartment
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int32
       requestBody:
         description: Econom t
         content:
@@ -439,61 +321,4 @@ components:
           type: string
         message:
           type: string
-  parameters:
-    q:
-      name: q
-      in: query
-      description: '**City name**. *Example: London*. You can call by city name, or
-        by city name and country code. The API responds with a list of results that
-        match a searching word. For the query value, type the city name and optionally
-        the country code divided by a comma; use ISO 3166 country codes.'
-      required: false
-      style: form
-      explode: true
-      schema:
-        type: string
-    idd:
-      name: idd
-      in: query
-      description: '**City ID**. *Example: `2172797`*. You can call by city ID. The
-        API responds with the exact result. The List of city IDs can be downloaded
-        [here](http://bulk.openweathermap.org/sample/). You can include multiple cities
-        in this parameter &mdash; just separate them by commas. The limit of locations
-        is 20. *Note: A single ID counts as a one API call. So, if you have city IDs,
-        it''s treated as 3 API calls.*'
-      required: false
-      style: form
-      explode: true
-      schema:
-        type: string
-    lat:
-      name: lat
-      in: query
-      description: '**Latitude**. *Example: 35*. The latitude coordinate of the location
-        of your interest. Must use with `lon`.'
-      required: false
-      style: form
-      explode: true
-      schema:
-        type: string
-    lon:
-      name: lon
-      in: query
-      description: '**Longitude**. *Example: 139*. Longitude coordinate of the location
-        of your interest. Must use with `lat`.'
-      required: false
-      style: form
-      explode: true
-      schema:
-        type: string
-    zipp:
-      name: zipp
-      in: query
-      description: '**Zip code**. Search by zip code. *Example: 95050,us*. Please
-        note that if the country is not specified, the search uses USA as a default.'
-      required: false
-      style: form
-      explode: true
-      schema:
-        type: string
 
